2006-02-22  Alexander Gottwald  <ago@starnet.com>

	* GL/glx/render2swap.c:
	Bug #5978: Added missing swap of input variables. Added missing cases
	for GL_SECONDARY_COLOR_ARRAY and GL_FOG_COORD_ARRAY (Colin McDonald)

2006-02-22  Alexander Gottwald  <ago@starnet.com>

	* hw/dmx/Makefile.am:
	* hw/dmx/input/Makefile.am:
	* hw/dmx/config/Makefile.am:

	Added Mesa include directory

2006-02-21  Jeremy C. Reed  <reed@reedmedia.net>

	* GL/mesa/shader/slang/Makefile.am:
	* GL/symlink-mesa.sh:

	Update to build against Mesa HEAD.

2006-02-20  Ian Romanick  <idr@us.ibm.com>

	* hw/xfree86/os-support/bus/Pci.c: (handlePciBIOS), (readPciBios),
	(HandlePciBios), (xf86ReadPciBIOS):
	* hw/xfree86/os-support/bus/xf86Pci.h:

	Eliminate unused PCI BIOS reading functionality.  The old code
	used several function pointers to implement a level of
	flexability that was never used.  The code also had unused
	support for extracting a single image type from a larger
	expansion ROM. 

	Fix the spelling of PCI_BIOS_OPEN_FIRMWARE.

	Fix a couple errors in #ifdef debug code.

2006-02-20  Ian Romanick  <idr@us.ibm.com>

	* hw/xfree86/common/xf86pciBus.c: (FindPCIVideoInfo),
	(xf86GetPciRes):
	* hw/xfree86/common/xf86str.h:
	* hw/xfree86/os-support/bus/xf86Pci.h:
	* hw/xfree86/scanpci/xf86PciData.h:
	* hw/xfree86/scanpci/xf86ScanPci.c:
	Eliminate all the code for querying the PCI class from the PCI
	ID database.  Class information is not, and never has been,
	stored there.  Therefore, this is just a bunch of elaborate
	code to read 0x00000000. 


2006-02-21  Adam Jackson  <ajax@freedesktop.org>

	* Xi/allowev.c:
	* Xi/chgdctl.c:
	* Xi/chgfctl.c:
	* Xi/chgkbd.c:
	* Xi/chgkmap.c:
	* Xi/chgprop.c:
	* Xi/chgptr.c:
	* Xi/closedev.c:
	* Xi/devbell.c:
	* Xi/exevents.c:
	* Xi/extinit.c:
	* Xi/getbmap.c:
	* Xi/getdctl.c:
	* Xi/getfctl.c:
	* Xi/getfocus.c:
	* Xi/getkmap.c:
	* Xi/getmmap.c:
	* Xi/getprop.c:
	* Xi/getselev.c:
	* Xi/getvers.c:
	* Xi/grabdev.c:
	* Xi/grabdevb.c:
	* Xi/grabdevk.c: