@@ -458,24 +458,6 @@ exaComposite(CARD8	op,
         return;
     }
 
-    /* simplify the drivers by reducing here */
-    switch (op) {
-	case PictOpDisjointClear:
-	case PictOpConjointClear:
-	    op = PictOpClear;
-	    break;    
-	case PictOpDisjointSrc:
-	case PictOpConjointSrc:
-	    op = PictOpSrc;
-	    break;    
-	case PictOpDisjointDst:
-	case PictOpConjointDst:
-	case PictOpDst:
-	    return;    
-	default:
-	    break;
-    }
-
     /* Remove repeat in source if useless */
     if (pSrc->repeat && !pSrc->transform && xSrc >= 0 &&
 	(xSrc + width) <= pSrc->pDrawable->width && ySrc >= 0 &&
