@@ -1,3 +1,8 @@
+2006-02-23  Adam Jackson  <ajax@freedesktop.org>
+
+	* exa/exa_render.c:
+	Remove redundant composite op reduction, done in Render now.
+
 2006-02-22  Alexander Gottwald  <ago@starnet.com>
 
 	* GL/glx/render2swap.c:
